# cdoc-ocr

./: .env.local  Makefile  README.md  main.py  output.csv  output.tsv  output.xlsx  pdf2doc.py  pyproject.toml
